# rompmusic-server

./: .env.example  .gitignore  CHANGELOG.md  Dockerfile  README.md  alembic.ini  pyproject.toml
alembic/: env.py
alembic/versions/: 0001_add_tracks_file_path_index.py  0002_play_history_anonymous.py  0003_playlists_ordering.py
rompmusic_server/: __init__.py  auth.py  config.py  database.py  main.py  rate_limit.py
rompmusic_server/admin/: views.py
rompmusic_server/admin/templates/: base.html  dashboard.html  login.html
rompmusic_server/admin/templates/partials/: scan_result.html
rompmusic_server/api/: schemas.py
rompmusic_server/models/: __init__.py  album.py  artist.py  base.py  invitation.py  password_reset.py  play_history.py  playlist.py  server_config.py  timestamp.py  track.py  user.py  verification_code.py
rompmusic_server/routers/: admin.py  artwork.py  auth.py  config.py  invite.py  library.py  playlists.py  search.py  streaming.py
rompmusic_server/scripts/: create_admin.py
rompmusic_server/services/: __init__.py  artwork.py  email.py  lastfm.py  metadata_quality.py  recommendations.py  scanner.py  server_settings.py
scripts/: diagnose_metadata.py
tests/: conftest.py  test_auth.py  test_library.py  test_play_history.py  test_playlists.py  test_streaming.py
