# Copyright (C) 2024 RompMusic Contributors
# SPDX-License-Identifier: GPL-3.0-or-later

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "rompmusic-server"
version = "0.1.0-beta.1"
description = "Libre self-hosted music streaming server"
readme = "README.md"
license = {text = "GPL-3.0-or-later"}
requires-python = ">=3.11"
authors = [{name = "RompMusic Contributors"}]
keywords = ["music", "streaming", "libre", "self-hosted"]
classifiers = [
    "License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)",
    "Development Status :: 4 - Beta",
]
dependencies = [
    "fastapi>=0.109.0",
    "uvicorn[standard]>=0.27.0",
    "sqlalchemy>=2.0.0",
    "asyncpg>=0.29.0",
    "alembic>=1.13.0",
    "python-jose[cryptography]>=3.3.0",
    "passlib[bcrypt]>=1.7.4",
    "bcrypt>=4.0.0,<4.1",
    "python-multipart>=0.0.6",
    "mutagen>=1.47.0",
    "pillow>=10.0.0",
    "redis>=5.0.0",
    "jinja2>=3.1.0",
    "pydantic-settings>=2.0.0",
    "email-validator>=2.0.0",
    "httpx>=0.26.0",
]

[project.optional-dependencies]
dev = ["pytest>=7.0", "pytest-asyncio>=0.23", "httpx>=0.26", "ruff>=0.1"]

[tool.setuptools.packages.find]
where = ["."]
include = ["rompmusic_server*"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
